logs/bitsyauth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/bitsyauth'...
Listing './lib/python3.5/site-packages/bitsyauth-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/markup'...
Compiling './lib/python3.5/site-packages/markup/form.py'...
***   File "./lib/python3.5/site-packages/markup/form.py", line 89
    except Exception, e: # horrible!
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/markup-0.2.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/skimpyGimpy'...
Compiling './lib/python3.5/site-packages/skimpyGimpy/KiPNG.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/KiPNG.py", line 25
    c = 0xedb88320L ^ (c >> 1)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/bdf.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/bdf.py", line 34
    raise ValueError, "no mapping for "+repr(c)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/canvas.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/canvas.py", line 42
    raise ValueError, "virtual superclass"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/getparm.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/getparm.py", line 13
    raise ValueError, "parameter %s requires a value" % repr(name)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/httpTempFile.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/httpTempFile.py", line 68
    print "test iteration", i
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/skimpyGimpy/pngBarChart.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/pngBarChart.py", line 81
    print "writing", fn, js, html
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/skimpyGimpy/pngPieChart.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/pngPieChart.py", line 94
    raise ValueError, "end must be larger than start %s %s" % (
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/skimpyAPI.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/skimpyAPI.py", line 38
    raise ValueError, "hex color specifications must have 6 hex digits: "+repr(s)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/skimpyGimpy.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/skimpyGimpy.py", line 29
    raise ValueError, "size too small"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimpyGimpy/waveTools.py'...
***   File "./lib/python3.5/site-packages/skimpyGimpy/waveTools.py", line 139
    raise ValueError, "indices not ascending"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/skimpyGimpy-1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
